[gd_scene load_steps=4 format=2]

[ext_resource path="res://Door_House.gd" type="Script" id=1]
[ext_resource path="res://Assets/warning.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14, 8.5 )

[node name="Door_House" type="Area2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="Spawn" type="Position2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Warning" type="Sprite" parent="."]
visible = false
position = Vector2( 19, -10 )
scale = Vector2( 0.0390625, 0.0415039 )
texture = ExtResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Door_House_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Door_House_body_exited"]
